<resources>
    <string name="app_name">FreedomPlayer</string>
    <string name="FreedomPlayer">FreedomPlayer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="playerText">Music player</string>
    <string name="downloaderText">Music downloader</string>
    <string name="playPlaylist">Воспроизвести</string>
    <string name="playPlaylistShuffled">Случайно</string>
    <string name="shufflePlayback">Shuffle playback</string>
    <string name="shufflePlaybackEnabled">Shuffle playback enabled</string>
    <string name="shufflePlaybackDisabled">Shuffle playback disabled</string>

    <!-- Spinners content-->
    <string name="themeSystem">System</string>
    <string name="themeLight">Light</string>
    <string name="themeDark">Dark</string>

    <string name="langRu">Русский</string>
    <string name="langEn">English</string>

    <string name="activityPlayer">Music player</string>
    <string name="activityDownloader">Music downloader</string>
    <string name="playback_channel_name">Playback controls</string>
    <string name="playback_channel_description">Shows current track and playback controls</string>
    <string name="notification_playback_title">Now playing</string>
    <string name="notification_playback_paused">Playback paused</string>
    <string name="pausePlayback">Pause</string>
    <string name="resumePlayback">Play</string>
    <string name="track_player_title">Track player</string>
    <string name="closeTrackPlayer">Close track player</string>
    <string name="currentTrackTime">Current time</string>
    <string name="totalTrackTime">Total duration</string>
    <string name="noTrackPlaying">No track is playing</string>
    <string name="nextTrackLabel">Next:</string>
    <string name="likeTrack">Like track</string>
    <string name="likedTrack">Liked track</string>
    <string name="unlikeTrack">Unlike track</string>

    <string name="formatMP3">.mp3</string>
    <string name="formatOpus">.opus</string>

    <string name="bitrateMax">No limit</string>
    <string name="bitrate192">192 Kbps</string>
    <string name="bitrate128">128 Kbps</string>
    <string name="bitrate64">64 Kbps</string>
    <string name="bitrate32">32 Kbps</string>

    <!-- Settings-->
    <string name="change">Change</string>
    <string name="undefined">Undefined</string>

    <string name="settingsText">Settings</string>
    <string name="downloaderOptions">Downloader options</string>
    <string name="fileFormatOptions">File format</string>
    <string name="UIOptions">User interface</string>
    <string name="settingTheme">Theme</string>
    <string name="settingLanguage">Language</string>
    <string name="settingDefaultActivity">Default page</string>

    <string name="settingAutoDownload">Auto download new tracks</string>
    <string name="settingMobileNetworkDownload">Download with mobile network</string>
    <string name="settingAutoDownloadStartTime">Auto download start time</string>
    <string name="settingDownloadPath">Download path</string>
    <string name="settingFileFormat">File format</string>
    <string name="settingBitrate">Bitrate</string>
    <string name="settingFileNameTemplate">File name template</string>
    <string name="settingSmartNaming">Use smart file naming (for YT music videos)</string>

    <string name="defaultFileNameTemplate">$Artist$ - $Track$</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Downloader -->
    <string name="add_playlist_title">Добавить плейлист</string>
    <string name="playlist_name">Название</string>
    <string name="playlist_url">Ссылка</string>
    <string name="auto_update">Автообновление</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="download_playlist">Скачать</string>
    <string name="playlist_menu">Меню</string>
    <string name="playlist_fields_required">Заполните название и ссылку</string>
    <string name="edit_playlist_title">Редактировать плейлист</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="delete_playlist">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="delete_playlist_confirm_title">Удалить плейлист?</string>
    <string name="delete_playlist_confirm_message">Плейлист «%1$s» будет удалён.</string>
    <string name="download_track_title">Скачать трек</string>
    <string name="track_url">Ссылка на трек</string>
    <string name="track_url_required">Введите ссылку на трек</string>
    <string name="ytdlp_updating">Обновление yt-dlp…</string>
    <string name="download_started">Скачивание начато…</string>
    <string name="download_success">Загрузка завершена</string>
    <string name="download_success_details">Загружено %1$d из %2$d треков в %3$s</string>
    <string name="download_success_details_single">Файл сохранён в %1$s</string>
    <string name="download_failed">Ошибка скачивания: %1$s</string>
    <string name="download_path_not_set">Укажите папку загрузки в настройках загрузчика</string>
    <string name="download_path_inaccessible">Не удалось открыть папку загрузки</string>
    <string name="download_path_no_write">Нет прав на запись в папку загрузки. Выберите папку заново в настройках</string>
    <string name="playlist_folder_invalid_name">Некорректное название плейлиста для папки</string>
    <string name="playlist_folder_create_failed">Не удалось создать папку «%1$s»</string>
    <string name="playlist_add_failed">Не удалось добавить плейлист</string>
    <string name="playlist_update_failed">Не удалось обновить плейлист</string>
    <string name="playlist_not_found">Плейлист не найден</string>
    <string name="playlist_folder_name_exists">Папка «%1$s» уже существует</string>
    <string name="playlist_folder_rename_failed">Не удалось переименовать папку в «%1$s»</string>
    <string name="playlist_songs_to_download">Найдено треков для скачивания: %1$d</string>
    <string name="playlist_scan_failed">Не удалось получить список треков плейлиста</string>
    <string name="no_playlists_for_auto_update">Нет плейлистов с включенным автообновлением</string>
    <string name="refresh">Переиндексировать</string>
</resources>
