<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/player_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/player_card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/player_album_art"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/track_player_title"
            android:src="@drawable/baseline_music_note_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Artist"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/player_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/player_prev"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/previous"
            android:src="@drawable/baseline_skip_previous_24" />

        <ImageView
            android:id="@+id/player_play_pause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/resumePlayback"
            android:src="@drawable/baseline_play_arrow_24" />

        <ImageView
            android:id="@+id/player_next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/next"
            android:src="@drawable/baseline_skip_next_24" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/player_progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:max="100"
        android:progress="0"
        android:progressTint="#FF0000" />

</LinearLayout>
