<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SettingsMenuFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context=".activities.SettingsActivity">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settingsText"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="0.111"
                tools:layout_editor_absoluteX="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/baseline_music_note_24" />

                    <TextView
                        android:id="@+id/settingsPlayerBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/playerText"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/baseline_file_download_24" />

                    <TextView
                        android:id="@+id/settingsDownloaderBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/downloaderOptions"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/baseline_widgets_24" />

                    <TextView
                        android:id="@+id/settingsUIBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/UIOptions"
                        android:textSize="20sp" />

                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>